Bug 323170 - Status bar's tool tip shows unsanitized strings
Summary: Status bar's tool tip shows unsanitized strings
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-05 00:10 UTC by Fabio D'Urso
Modified: 2013-08-05 00:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabio D'Urso 2013-08-05 00:10:10 UTC
This issue is very similar to bug 321778, but it affects the status bar's tooltip text (which is shown if the full string doesn't fit in the available space).

Reproducible: Always

Steps to Reproduce:
1. Create file named "Tes<font color=red>t test test test test test"
2. Select it
3. Resize window so that the text doesn't fully fit in the status bar
3. Hover on the status bar
Actual Results:  
The tooltip shows "Test test test test test test", and everything starting from the fourth letter is red.

Expected Results:  
The filename should not be interpreted as HTML
Comment 1 Fabio D'Urso 2013-08-05 00:16:16 UTC
Git commit d9b111b0e8624bedee9496f9fb6a1fb9b040458a by Fabio D'Urso.
Committed on 01/08/2013 at 12:17.
Pushed by fabiod into branch 'KDE/4.11'.

dolphin: Escape text in statusbar tooltip

This fixes the same issue as 4450f8449af91e491636728a4669e2a9e27b49fa,
but for the status bar's tooltip text.
FIXED-IN: 4.11.0
REVIEW: 111836

M  +9    -1    dolphin/src/statusbar/dolphinstatusbar.cpp

http://commits.kde.org/kde-baseapps/d9b111b0e8624bedee9496f9fb6a1fb9b040458a